# QCP

./: .gitignore  CMakeLists.old  CMakeLists.txt  Makefile  README.md
bases/: 3-21g  6-311++g(2d_2p)  6-311++g(3df_3pd).bas  6-31g  6-31g(d_p).bas  6-31g_st_  aug-cc-pvdz.bas  aug-cc-pvtz  cc-pvdz  cc-pvtz.bas  d-aug-cc-pv5z  d-aug-cc-pvqz.bas  d-aug-cc-pvtz  dz_dunhay  dzp_dunhay  dzpd_dunhay  sto-3g-u  sto-3g-u.bas  sto-3g.bas  tzp_dunhay.bas
documentation/: copyrights.txt  documentation.txt
examples/: h2_ccsd.txt  h2_hf.txt
src/: AOData.f90  AtomData.f90  CC.f90  CI.f90  CMakeLists.txt  CalcData.f90  GeometryOptimizations.f90  InputProcessor.f90  IntegralTensors.f90  IntegralTransformer.f90  Integrals.f90  MP2.f90  MatVecOps.f90  MolData.f90  NucAOsGenerator.f90  NucData.f90  NuclearDerivatives.f90  NuclearVibration.f90  Parallel.f90  PrintModule.f90  QCP.f90  Relativistic.f90  ResultData.f90  SCFMatBuilder.f90  SCFRoutines.f90  SpecialFunctions.f90  Timing.f90  test.f90
